api ready to deploy

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -65,15 +65,15 @@
 
 <!-- Begin page content -->
 <main class="flex-shrink-0">
-  <div class="container">
+  <div class="container text-center">
     <div class="mt-5 card" style="background-color:#23262e;color: white;">
       <div class="card-header">
         Random insult 
       </div>
-      <div class="card-body">
+      <div class="card-body" >
         <blockquote class="blockquote mb-0">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          <a href="#" class="btn btn-primary" style="margin-left:35% ;">Generate next</a>
+          <p id="insultarea">You’re the reason God created the middle finger.</p>
+          <a href="#" onclick="generate()" class="btn btn-primary" style="">Generate next</a>
         </blockquote>
       </div>
     </div>
@@ -88,6 +88,7 @@
 
 
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/script.js"></script>
 
       
   </body>
