--- a/frontend/index.html
+++ b/frontend/index.html
@@ -73,7 +73,7 @@
       <div class="card-body" >
         <blockquote class="blockquote mb-0">
           <p id="insultarea">You’re the reason God created the middle finger.</p>
-          <a href="#" onclick="generate()" class="btn btn-primary" style="">Generate next</a>
+          <a href="#" onclick="generate()" class="btn btn-primary">Generate next</a>
         </blockquote>
       </div>
     </div>
