modified some styling

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -68,7 +68,7 @@
   <div class="container text-center">
     <div class="mt-5 card" style="background-color:#23262e;color: white;">
       <div class="card-header">
-        Random insult 
+        Random insult:
       </div>
       <div class="card-body" >
         <blockquote class="blockquote mb-0">
